apps/base/default/network-multitool/network-multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-multitool
  namespace: default
  labels:
    app: network-multitool
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll
    keel.sh/approvals: '1'
    keel.sh/pollSchedule: '@daily'
    keel.sh/approvalDeadline: 672
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-multitool
  template:
    metadata:
      labels:
        app: network-multitool
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool@sha256:6bbaffc56bcf3e3a6f2ac8b9e88b1bfa485d07871402a8970d0219a83bd9efde
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      dnsConfig:
        options:
        - name: ndots
          value: "1"
---
kind: Service
apiVersion: v1
metadata:
  name: network-multitool-service
  namespace: default
spec:
  selector:
    app: network-multitool
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-multitool-ingress
  namespace: default
  annotations:
    flame.pawelmalak/type: application
    flame.pawelmalak/name: network-multitool
    flame.pawelmalak/url: http://network-multitool.example.com
    # flame.pawelmalak/icon: https://upload.wikimedia.org/wikipedia/labs/thumb/b/ba/Kubernetes-icon-color.svg/2110px-Kubernetes-icon-color.svg.png
    gethomepage.dev/description: Network Multitool
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Other Apps
    gethomepage.dev/icon: multitool.svg
    gethomepage.dev/name: Multitool
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 'network-multitool.example.com'
    secretName: network-multitool-tls
  rules:
  - host: network-multitool.example.com
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: network-multitool-service
            port:
              number: 80
